- support for audio dithering - make a new phoneme map when none exists and user tries to open it

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1902,12 +1902,15 @@ BEGIN
     LTEXT           "Start/end trim (ms):",IDC_STATIC_TRIM,18,21,102,8
     EDITTEXT        IDC_EDIT_TRIMLEFT,17,33,36,14,ES_AUTOHSCROLL | ES_NUMBER
     EDITTEXT        IDC_EDIT_TRIMRIGHT,61,33,34,14,ES_AUTOHSCROLL | ES_NUMBER
+    RTEXT           "Noise Gate Preset:",IDC_STATIC_PRESET,15,54,72,8
+    COMBOBOX        IDC_COMBO_PRESET2,95,52,97,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Dither (16 -> 8 bit)",IDC_CHECK_AUDIODITHER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,103,13,86,10
+    CONTROL         "Auto gain",IDC_CHECK_AUTOGAIN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,103,26,75,10
+    CONTROL         "Detect start/end",IDC_CHECK_DETECTSTARTEND,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,103,39,94,10
     RTEXT           "Open T (dB)",IDC_STATIC_OPENTHR,15,74,40,8
     EDITTEXT        IDC_EDIT_OPENTHR,61,71,29,14,ES_AUTOHSCROLL
     RTEXT           "Close T (dB)",IDC_STATIC_CLOSETHR,15,90,40,8
     EDITTEXT        IDC_EDIT_CLOSETHR,61,87,30,14,ES_AUTOHSCROLL
-    CONTROL         "Auto gain",IDC_CHECK_AUTOGAIN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,131,19,47,10
-    CONTROL         "Detect start/end",IDC_CHECK_DETECTSTARTEND,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,131,36,66,10
     RTEXT           "Attack (ms)",IDC_STATIC_ATTACK,113,72,38,8
     EDITTEXT        IDC_EDIT_ATTACK,153,69,40,14,ES_AUTOHSCROLL
     RTEXT           "Release (ms)",IDC_STATIC_RELEASE,109,89,42,8
@@ -1919,8 +1922,6 @@ BEGIN
     PUSHBUTTON      "Force repackage audio",IDC_BUTTON_REPACKAGE,95,142,105,14
     PUSHBUTTON      "Clear audio file cache",IDC_BUTTON_CLEARAUDIOCACHE,95,160,105,14
     GROUPBOX        "Recording Defaults",IDC_GROUP2,7,7,193,113
-    RTEXT           "Noise Gate Preset:",IDC_STATIC_PRESET,15,54,72,8
-    COMBOBOX        IDC_COMBO_PRESET2,95,52,97,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_AUDIOEDIT DIALOGEX 0, 0, 265, 226
@@ -1933,13 +1934,16 @@ BEGIN
     LTEXT           "Start/end trim (ms):",IDC_STATIC_TRIM,18,21,102,8
     EDITTEXT        IDC_EDIT_TRIMLEFT,17,34,36,14,ES_AUTOHSCROLL | ES_NUMBER
     EDITTEXT        IDC_EDIT_TRIMRIGHT,61,33,33,14,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "Dither (for 16 -> 8 bit)",IDC_CHECK_AUDIODITHER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,164,13,88,10
+    CONTROL         "Auto gain",IDC_CHECK_AUTOGAIN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,164,26,47,10
+    CONTROL         "Detect start/end",IDC_CHECK_DETECTSTARTEND,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,164,38,66,10
+    RTEXT           "N. G. Preset:",IDC_STATIC_PRESET,12,56,46,8
+    COMBOBOX        IDC_COMBO_PRESET2,61,53,81,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Open T (dB)",IDC_STATIC_OPENTHR,15,74,40,8
     EDITTEXT        IDC_EDIT_OPENTHR,61,71,29,14,ES_AUTOHSCROLL
     RTEXT           "Close T (dB)",IDC_STATIC_CLOSETHR,15,90,40,8
     EDITTEXT        IDC_EDIT_CLOSETHR,61,87,30,14,ES_AUTOHSCROLL
     PUSHBUTTON      "Re-process",IDC_BUTTON_PROCESS,34,140,18,14,BS_ICON
-    CONTROL         "Auto gain",IDC_CHECK_AUTOGAIN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,164,17,47,10
-    CONTROL         "Detect start/end",IDC_CHECK_DETECTSTARTEND,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,164,34,66,10
     RTEXT           "Attack (ms)",IDC_STATIC_ATTACK,146,54,38,8
     EDITTEXT        IDC_EDIT_ATTACK,186,51,40,14,ES_AUTOHSCROLL
     RTEXT           "Release (ms)",IDC_STATIC_RELEASE,142,71,42,8
@@ -1956,8 +1960,6 @@ BEGIN
     COMBOBOX        IDC_COMBO_BIT,72,207,62,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     CONTROL         "",IDC_RADIO_NEGATIVE,"Button",BS_AUTORADIOBUTTON | BS_LEFTTEXT,7,118,16,10
     CONTROL         "",IDC_RADIO_FINAL,"Button",BS_AUTORADIOBUTTON | BS_LEFTTEXT,7,167,16,10
-    RTEXT           "N. G. Preset:",IDC_STATIC_PRESET,12,56,46,8
-    COMBOBOX        IDC_COMBO_PRESET2,61,53,81,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_PHONEMEEDITOR DIALOGEX 0, 0, 315, 266
@@ -2635,6 +2637,7 @@ BEGIN
         RIGHTMARGIN, 200
         VERTGUIDE, 61
         VERTGUIDE, 95
+        VERTGUIDE, 103
         VERTGUIDE, 179
         TOPMARGIN, 7
         BOTTOMMARGIN, 191
