--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1892,36 +1892,37 @@ BEGIN
     LTEXT           "Choose a view and loop for this talker's mouth.",IDC_STATIC3,7,7,117,19
 END
 
-IDD_AUDIOPREFERENCES DIALOGEX 0, 0, 207, 198
+IDD_AUDIOPREFERENCES DIALOGEX 0, 0, 207, 210
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Audio Preferences"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Ok",IDOK,95,177,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,150,177,50,14
-    LTEXT           "Start/end trim (ms):",IDC_STATIC_TRIM,18,21,102,8
-    EDITTEXT        IDC_EDIT_TRIMLEFT,17,33,36,14,ES_AUTOHSCROLL | ES_NUMBER
-    EDITTEXT        IDC_EDIT_TRIMRIGHT,61,33,34,14,ES_AUTOHSCROLL | ES_NUMBER
-    RTEXT           "Noise Gate Preset:",IDC_STATIC_PRESET,15,54,72,8
-    COMBOBOX        IDC_COMBO_PRESET2,95,52,97,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Dither (16 -> 8 bit)",IDC_CHECK_AUDIODITHER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,103,13,86,10
-    CONTROL         "Auto gain",IDC_CHECK_AUTOGAIN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,103,26,75,10
-    CONTROL         "Detect start/end",IDC_CHECK_DETECTSTARTEND,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,103,39,94,10
-    RTEXT           "Open T (dB)",IDC_STATIC_OPENTHR,15,74,40,8
-    EDITTEXT        IDC_EDIT_OPENTHR,61,71,29,14,ES_AUTOHSCROLL
-    RTEXT           "Close T (dB)",IDC_STATIC_CLOSETHR,15,90,40,8
-    EDITTEXT        IDC_EDIT_CLOSETHR,61,87,30,14,ES_AUTOHSCROLL
-    RTEXT           "Attack (ms)",IDC_STATIC_ATTACK,113,72,38,8
-    EDITTEXT        IDC_EDIT_ATTACK,153,69,40,14,ES_AUTOHSCROLL
-    RTEXT           "Release (ms)",IDC_STATIC_RELEASE,109,89,42,8
-    EDITTEXT        IDC_EDIT_RELEASE,153,86,40,14,ES_AUTOHSCROLL
-    RTEXT           "Hold (ms)",IDC_STATIC_HOLD,119,105,31,8
-    EDITTEXT        IDC_EDIT_HOLD,153,103,40,14,ES_AUTOHSCROLL
-    LTEXT           "Midi device:",IDC_STATIC1,7,127,45,8,0,WS_EX_RIGHT
-    COMBOBOX        IDC_COMBO_MIDIDEVICE,61,125,139,150,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Force repackage audio",IDC_BUTTON_REPACKAGE,95,142,105,14
-    PUSHBUTTON      "Clear audio file cache",IDC_BUTTON_CLEARAUDIOCACHE,95,160,105,14
-    GROUPBOX        "Recording Defaults",IDC_GROUP2,7,7,193,113
+    DEFPUSHBUTTON   "Ok",IDOK,95,189,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,150,189,50,14
+    LTEXT           "Start/end trim (ms):",IDC_STATIC_TRIM,18,32,102,8
+    EDITTEXT        IDC_EDIT_TRIMLEFT,17,44,36,14,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_EDIT_TRIMRIGHT,61,44,34,14,ES_AUTOHSCROLL | ES_NUMBER
+    RTEXT           "Noise Gate Preset:",IDC_STATIC_PRESET,15,65,72,8
+    COMBOBOX        IDC_COMBO_PRESET2,95,63,97,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Compression",IDC_CHECK_COMPRESSION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,103,13,54,10
+    CONTROL         "Dither (16 -> 8 bit)",IDC_CHECK_AUDIODITHER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,103,26,86,10
+    CONTROL         "Auto gain",IDC_CHECK_AUTOGAIN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,103,38,75,10
+    CONTROL         "Detect start/end",IDC_CHECK_DETECTSTARTEND,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,103,50,94,10
+    RTEXT           "Open T (dB)",IDC_STATIC_OPENTHR,15,85,40,8
+    EDITTEXT        IDC_EDIT_OPENTHR,61,82,29,14,ES_AUTOHSCROLL
+    RTEXT           "Close T (dB)",IDC_STATIC_CLOSETHR,15,101,40,8
+    EDITTEXT        IDC_EDIT_CLOSETHR,61,98,30,14,ES_AUTOHSCROLL
+    RTEXT           "Attack (ms)",IDC_STATIC_ATTACK,113,83,38,8
+    EDITTEXT        IDC_EDIT_ATTACK,153,80,40,14,ES_AUTOHSCROLL
+    RTEXT           "Release (ms)",IDC_STATIC_RELEASE,109,100,42,8
+    EDITTEXT        IDC_EDIT_RELEASE,153,97,40,14,ES_AUTOHSCROLL
+    RTEXT           "Hold (ms)",IDC_STATIC_HOLD,119,116,31,8
+    EDITTEXT        IDC_EDIT_HOLD,153,114,40,14,ES_AUTOHSCROLL
+    LTEXT           "Midi device:",IDC_STATIC1,7,138,45,8,0,WS_EX_RIGHT
+    COMBOBOX        IDC_COMBO_MIDIDEVICE,61,136,139,150,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Force repackage audio",IDC_BUTTON_REPACKAGE,95,153,105,14
+    PUSHBUTTON      "Clear audio file cache",IDC_BUTTON_CLEARAUDIOCACHE,95,171,105,14
+    GROUPBOX        "Recording Defaults",IDC_GROUP2,7,7,193,124
 END
 
 IDD_AUDIOEDIT DIALOGEX 0, 0, 265, 226
@@ -1934,9 +1935,10 @@ BEGIN
     LTEXT           "Start/end trim (ms):",IDC_STATIC_TRIM,18,21,102,8
     EDITTEXT        IDC_EDIT_TRIMLEFT,17,34,36,14,ES_AUTOHSCROLL | ES_NUMBER
     EDITTEXT        IDC_EDIT_TRIMRIGHT,61,33,33,14,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "Dither (for 16 -> 8 bit)",IDC_CHECK_AUDIODITHER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,164,13,88,10
-    CONTROL         "Auto gain",IDC_CHECK_AUTOGAIN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,164,26,47,10
-    CONTROL         "Detect start/end",IDC_CHECK_DETECTSTARTEND,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,164,38,66,10
+    CONTROL         "Auto gain",IDC_CHECK_AUTOGAIN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,108,16,47,10
+    CONTROL         "Dither (for 16 -> 8 bit)",IDC_CHECK_AUDIODITHER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,164,16,88,10
+    CONTROL         "Compression",IDC_CHECK_COMPRESSION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,108,33,54,10
+    CONTROL         "Detect start/end",IDC_CHECK_DETECTSTARTEND,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,164,34,66,10
     RTEXT           "N. G. Preset:",IDC_STATIC_PRESET,12,56,46,8
     COMBOBOX        IDC_COMBO_PRESET2,61,53,81,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Open T (dB)",IDC_STATIC_OPENTHR,15,74,40,8
@@ -2640,7 +2642,7 @@ BEGIN
         VERTGUIDE, 103
         VERTGUIDE, 179
         TOPMARGIN, 7
-        BOTTOMMARGIN, 191
+        BOTTOMMARGIN, 203
     END
 
     IDD_AUDIOEDIT, DIALOG
