- fixup some accelerators - fixup new game dialog

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -721,7 +721,7 @@ IDR_MAINFRAME ACCELERATORS
 BEGIN
     "B",            ID_CLASSBROWSER,        VIRTKEY, ALT, NOINVERT
     VK_F8,          ID_COMPILE,             VIRTKEY, NOINVERT
-    "W",            ID_DUMPXML,             VIRTKEY, ALT, NOINVERT
+    VK_F8,          ID_COMPILEALL,          VIRTKEY, CONTROL, ALT, NOINVERT
     "C",            ID_EDIT_COPY,           VIRTKEY, CONTROL, NOINVERT
     VK_INSERT,      ID_EDIT_COPY,           VIRTKEY, CONTROL, NOINVERT
     VK_DELETE,      ID_EDIT_CUT,            VIRTKEY, SHIFT, NOINVERT
@@ -742,20 +742,19 @@ BEGIN
     "O",            ID_FILE_OPEN,           VIRTKEY, CONTROL, NOINVERT
     "P",            ID_FILE_PRINT,          VIRTKEY, CONTROL, NOINVERT
     "S",            ID_FILE_SAVE,           VIRTKEY, CONTROL, NOINVERT
-    "J",            ID_INTELLISENSE,        VIRTKEY, CONTROL, NOINVERT
     "T",            ID_LIGHTUPCOORDS,       VIRTKEY, CONTROL, NOINVERT
-    VK_F6,          ID_NEXT_PANE,           VIRTKEY, NOINVERT
-    VK_F6,          ID_PREV_PANE,           VIRTKEY, SHIFT, NOINVERT
-    VK_F11,         ID_ROOM_EXPLORER,       VIRTKEY, CONTROL, NOINVERT
     VK_F5,          ID_RUNGAME,             VIRTKEY, NOINVERT
-    VK_F9,          ID_SHOWCONTROLSCREEN,   VIRTKEY, ALT, NOINVERT
-    VK_F8,          ID_SHOWPRIORITYSCREEN,  VIRTKEY, ALT, NOINVERT
-    VK_F7,          ID_SHOWVISUALSCREEN,    VIRTKEY, ALT, NOINVERT
+    VK_F6,          ID_DEBUGGAME,           VIRTKEY, NOINVERT
+    VK_F7,          ID_STOPDEBUG,           VIRTKEY, NOINVERT
     "E",            ID_TOGGLEEGO,           VIRTKEY, CONTROL, NOINVERT
     VK_OEM_PLUS,    ID_VIEW_ZOOMIN,         VIRTKEY, CONTROL, NOINVERT
     VK_OEM_MINUS,   ID_VIEW_ZOOMOUT,        VIRTKEY, CONTROL, NOINVERT
-    VK_F12,         ID_VISUALSCRIPT,        VIRTKEY, CONTROL, NOINVERT
-    VK_F10,         ID_SELFTEST,            VIRTKEY, CONTROL, NOINVERT
+    VK_F10,         ID_PLAY,                VIRTKEY, NOINVERT
+    VK_F11,         ID_STOP,                VIRTKEY, NOINVERT
+    VK_F12,         ID_RECORD,              VIRTKEY, NOINVERT
+    VK_NUMPAD7,     ID_SHOWVISUALSCREEN,    VIRTKEY, NOINVERT
+    VK_NUMPAD8,     ID_SHOWPRIORITYSCREEN,  VIRTKEY, NOINVERT
+    VK_NUMPAD9,     ID_SHOWCONTROLSCREEN,   VIRTKEY, NOINVERT
 END
 
 IDR_ACCELERATORPICCOMMANDS ACCELERATORS
@@ -1169,16 +1168,14 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,229,103,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,290,103,50,14
-    LTEXT           "Name:",IDC_STATIC1,15,9,34,8,0,WS_EX_RIGHT
+    LTEXT           "Name:",IDC_STATIC1,14,9,34,8,0,WS_EX_RIGHT
     EDITTEXT        IDC_EDITNAME,55,7,77,14,ES_AUTOHSCROLL
-    LTEXT           "Location:",IDC_STATIC2,7,31,42,8,0,WS_EX_RIGHT
+    LTEXT           "Location:",IDC_STATIC2,7,31,41,8,0,WS_EX_RIGHT
     EDITTEXT        IDC_EDITPATH,55,28,224,14,ES_AUTOHSCROLL
     PUSHBUTTON      "Browse...",IDC_BUTTONBROWSE,290,28,50,14
-    CONTROL         "SCI Studio syntax",IDC_SYNTAX_SCI,"Button",BS_AUTORADIOBUTTON,16,85,81,10
-    CONTROL         "C++ syntax",IDC_SYNTAX_CPP,"Button",BS_AUTORADIOBUTTON | WS_DISABLED,16,100,97,10
-    GROUPBOX        "Language",IDC_GROUP1,7,72,88,45
-    LTEXT           "Template:",IDC_STATIC3,7,50,42,8,0,WS_EX_RIGHT
+    LTEXT           "Template:",IDC_STATIC3,7,50,41,8,0,WS_EX_RIGHT
     COMBOBOX        IDC_COMBOTEMPLATE,56,48,76,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_EDIT_DESCRIPTION,7,73,202,44,ES_MULTILINE | ES_READONLY
 END
 
 IDD_DIALOGCELFONT2 DIALOGEX 0, 0, 102, 219
@@ -2271,7 +2268,7 @@ BEGIN
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 340
-        VERTGUIDE, 49
+        VERTGUIDE, 48
         TOPMARGIN, 7
         BOTTOMMARGIN, 117
     END
