--- a/SCICompanion/SCICompanion.vcxproj
+++ b/SCICompanion/SCICompanion.vcxproj
@@ -188,7 +188,9 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <Text Include="Files\Licenses\r8brain-License.txt" />
     <Text Include="Files\Samples\PhonemeSentence.txt" />
     <Text Include="Files\Samples\sample_phoneme_map.ini" />
+    <Text Include="Files\TemplateGame\SCI0.txt" />
     <Text Include="Files\TemplateGame\SCI0\game.txt" />
+    <Text Include="Files\TemplateGame\SCI1.1.txt" />
     <Text Include="Files\TemplateGame\SCI1.1\INSTALL.TXT" />
     <Text Include="ReadMe.txt" />
     <Text Include="Tools\DOSBox\DOSBox 0.74 Manual.txt" />
