--- a/SCICompanion/SCICompanion.vcxproj.filters
+++ b/SCICompanion/SCICompanion.vcxproj.filters
@@ -23,6 +23,8 @@
     <Text Include="Tools\DOSBox\DOSBox 0.74 Manual.txt" />
     <Text Include="Files\Samples\sample_phoneme_map.ini" />
     <Text Include="Files\Samples\PhonemeSentence.txt" />
+    <Text Include="Files\TemplateGame\SCI0.txt" />
+    <Text Include="Files\TemplateGame\SCI1.1.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SCICompanion.h">
