- small UI changes - noise gate lookahead

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1667,22 +1667,22 @@ IDD_MESSAGEEDIT DIALOGEX 0, 0, 499, 118
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_VISIBLE | WS_CLIPCHILDREN | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    EDITTEXT        IDC_EDITMESSAGE,169,24,148,87,ES_MULTILINE | ES_WANTRETURN
-    PUSHBUTTON      "Clone",IDC_BUTTONCLONE,58,7,42,14
-    PUSHBUTTON      "Add sequence",IDC_BUTTONADDSEQ,104,7,59,14
+    EDITTEXT        IDC_EDITMESSAGE,147,24,170,87,ES_MULTILINE | ES_WANTRETURN
+    PUSHBUTTON      "Clone",IDC_BUTTONCLONE,58,7,28,14
+    PUSHBUTTON      "Add sequence",IDC_BUTTONADDSEQ,89,7,51,14
     RTEXT           "Noun:",IDC_STATIC3,7,28,42,8
-    COMBOBOX        IDC_COMBONOUN,58,25,105,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBONOUN,58,25,82,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Verb:",IDC_STATIC7,7,44,42,8
-    COMBOBOX        IDC_COMBOVERB,58,41,105,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBOVERB,58,41,82,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Condition:",IDC_STATIC6,7,60,42,8
-    COMBOBOX        IDC_COMBOCONDITION,58,57,105,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBOCONDITION,58,57,82,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Sequence:",IDC_STATIC8,7,78,42,8
-    EDITTEXT        IDC_EDITSEQ,58,74,85,14,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "",IDC_SPINSEQ,"msctls_updown32",UDS_SETBUDDYINT | UDS_AUTOBUDDY | UDS_ARROWKEYS,148,74,15,14
+    EDITTEXT        IDC_EDITSEQ,58,74,66,14,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "",IDC_SPINSEQ,"msctls_updown32",UDS_SETBUDDYINT | UDS_AUTOBUDDY | UDS_ARROWKEYS,125,74,15,14
     RTEXT           "Talker:",IDC_STATIC9,7,94,42,8
-    COMBOBOX        IDC_COMBOTALKER,58,91,105,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Message text:",IDC_STATIC2,172,11,47,8
-    PUSHBUTTON      "Commit",IDC_BUTTONCOMMIT,232,7,50,14
+    COMBOBOX        IDC_COMBOTALKER,58,91,82,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Message text:",IDC_STATIC2,150,11,47,8
+    PUSHBUTTON      "Commit",IDC_BUTTONCOMMIT,210,7,50,14
     PUSHBUTTON      "Add new",IDC_BUTTONADDNEW,7,7,42,14
     EDITTEXT        IDC_EDIT_SAMPLEBIT,383,78,109,14,ES_AUTOHSCROLL | ES_READONLY
     PUSHBUTTON      "8",IDC_BUTTON_PLAY2,383,7,19,14
@@ -1690,7 +1690,7 @@ BEGIN
     CONTROL         "",IDC_SLIDER,"msctls_trackbar32",WS_TABSTOP,442,53,50,15
     CONTROL         "Auto preview",IDC_CHECK_AUTOPREV,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,384,54,54,10
     LTEXT           "Duration:",IDC_STATIC_DURATION,386,67,106,8
-    PUSHBUTTON      "&Browse",IDC_BUTTONBROWSE,431,93,38,14
+    PUSHBUTTON      "&Import",IDC_BUTTONBROWSE,428,93,39,14
     PUSHBUTTON      "Record",IDC_BUTTON_RECORD,403,24,19,14,BS_ICON
     COMBOBOX        IDC_COMBO_WAVEFORMAT,426,25,66,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Quick Lip Sync",IDC_BUTTONLIPSYNC,321,24,55,14
@@ -1698,7 +1698,7 @@ BEGIN
     PUSHBUTTON      "Advanced",IDC_BUTTONLIPSYNC_DIALOG,321,52,55,14
     LTEXT           "Static",IDC_STATIC_BASE36NAME,322,10,55,8
     RTEXT           "Recording format:",IDC_STATIC_REC,427,11,59,8
-    PUSHBUTTON      "&Export",IDC_BUTTON_EXPORT,384,93,44,14
+    PUSHBUTTON      "&Export",IDC_BUTTON_EXPORT,384,93,40,14
     CONTROL         "Use Text",IDC_CHECK_USETEXT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,321,41,55,10
     PUSHBUTTON      "Delete",IDC_BUTTONDELETEAUDIO,474,93,18,14,BS_ICON
     PUSHBUTTON      "Edit",IDC_EDITAUDIO,383,24,19,14,BS_ICON | BS_FLAT
@@ -1763,7 +1763,7 @@ BEGIN
     CONTROL         "Auto preview",IDC_CHECK_AUTOPREV,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,53,131,10
     LTEXT           "Duration:",IDC_STATIC_DURATION,7,70,72,8
     EDITTEXT        IDC_EDIT_DESCRIPTION,7,99,139,56,ES_MULTILINE | ES_READONLY
-    PUSHBUTTON      "&Browse for .wav",IDC_BUTTONBROWSE,7,162,69,14
+    PUSHBUTTON      "&Import .wav",IDC_BUTTONBROWSE,7,162,69,14
     LTEXT           "Audio resources are short wav-based resources used for sound effects.",IDC_STATICTITLE,7,7,139,22
     PUSHBUTTON      "Record",IDC_BUTTON_RECORD,95,180,19,14,BS_ICON
     COMBOBOX        IDC_COMBO_WAVEFORMAT,7,181,83,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
@@ -2545,7 +2545,7 @@ BEGIN
         RIGHTMARGIN, 492
         VERTGUIDE, 49
         VERTGUIDE, 58
-        VERTGUIDE, 163
+        VERTGUIDE, 140
         VERTGUIDE, 321
         VERTGUIDE, 376
         TOPMARGIN, 7
