--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1175,7 +1175,8 @@ BEGIN
     PUSHBUTTON      "Browse...",IDC_BUTTONBROWSE,290,28,50,14
     LTEXT           "Template:",IDC_STATIC3,7,50,41,8,0,WS_EX_RIGHT
     COMBOBOX        IDC_COMBOTEMPLATE,56,48,76,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_EDIT_DESCRIPTION,7,73,202,44,ES_MULTILINE | ES_READONLY
+    EDITTEXT        IDC_EDIT_DESCRIPTION,7,73,138,44,ES_MULTILINE | ES_READONLY
+    CONTROL         "",IDC_STATIC_IMAGE,"Static",SS_BITMAP,147,73,15,13
 END
 
 IDD_DIALOGCELFONT2 DIALOGEX 0, 0, 102, 219
