--- a/SCICompanion/SCICompanion.vcxproj.filters
+++ b/SCICompanion/SCICompanion.vcxproj.filters
@@ -72,6 +72,24 @@
     <Image Include="Files\TemplateGame\SCI1.1.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Docs\source\images\MessageEntry.PNG">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Docs\source\images\MessageHeaderInclude.PNG">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Docs\source\images\MessageLightSwitch.PNG">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Docs\source\images\MessageLightSwitchCode.PNG">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Docs\source\images\Nouns.PNG">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Docs\source\images\Verbs.PNG">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\SCICompanion.rc2">
@@ -649,6 +667,19 @@
     <None Include="Files\TemplateGame\SCI1.1\src\titlescreen.sco" />
     <None Include="Files\TemplateGame\SCI1.1\msg\15.shm" />
     <None Include="Files\TemplateGame\SCI1.1\resource.aud" />
+    <None Include="Docs\build\html\genindex.html" />
+    <None Include="Docs\build\html\index.html" />
+    <None Include="Docs\build\html\intro.html" />
+    <None Include="Docs\build\html\messages.html" />
+    <None Include="Docs\build\html\search.html" />
+    <None Include="Docs\Makefile" />
+    <None Include="Docs\make.bat">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="Docs\source\messages.rst" />
+    <None Include="Docs\source\intro.rst" />
+    <None Include="Docs\source\index.rst" />
+    <None Include="Docs\source\conf.py" />
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="res\SCICompanion.manifest" />
