- add some more docs - use sample phonemap map if can't load view/loop for a talker - put group box to delineate audio functionality in message edit pane

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1668,7 +1668,7 @@ IDD_MESSAGEEDIT DIALOGEX 0, 0, 499, 118
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_VISIBLE | WS_CLIPCHILDREN | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    EDITTEXT        IDC_EDITMESSAGE,147,24,170,87,ES_MULTILINE | ES_WANTRETURN
+    EDITTEXT        IDC_EDITMESSAGE,147,24,162,87,ES_MULTILINE | ES_WANTRETURN
     PUSHBUTTON      "Clone",IDC_BUTTONCLONE,58,7,28,14
     PUSHBUTTON      "Add sequence",IDC_BUTTONADDSEQ,89,7,51,14
     RTEXT           "Noun:",IDC_STATIC3,7,28,42,8
@@ -1683,27 +1683,28 @@ BEGIN
     RTEXT           "Talker:",IDC_STATIC9,7,94,42,8
     COMBOBOX        IDC_COMBOTALKER,58,91,82,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Message text:",IDC_STATIC2,150,11,47,8
-    PUSHBUTTON      "Commit",IDC_BUTTONCOMMIT,210,7,50,14
+    PUSHBUTTON      "Commit",IDC_BUTTONCOMMIT,210,7,41,14
     PUSHBUTTON      "Add new",IDC_BUTTONADDNEW,7,7,42,14
-    EDITTEXT        IDC_EDIT_SAMPLEBIT,383,78,109,14,ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "8",IDC_BUTTON_PLAY2,383,7,19,14
-    PUSHBUTTON      "g",IDC_BUTTON_STOP,403,7,19,14
-    CONTROL         "",IDC_SLIDER,"msctls_trackbar32",WS_TABSTOP,442,53,50,15
-    CONTROL         "Auto preview",IDC_CHECK_AUTOPREV,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,384,54,54,10
-    LTEXT           "Duration:",IDC_STATIC_DURATION,386,67,106,8
-    PUSHBUTTON      "&Import",IDC_BUTTONBROWSE,428,93,39,14
-    PUSHBUTTON      "Record",IDC_BUTTON_RECORD,403,24,19,14,BS_ICON
-    COMBOBOX        IDC_COMBO_WAVEFORMAT,426,25,66,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_EDIT_SAMPLEBIT,383,80,103,14,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "8",IDC_BUTTON_PLAY2,383,17,19,14
+    PUSHBUTTON      "g",IDC_BUTTON_STOP,403,17,19,14
+    CONTROL         "",IDC_SLIDER,"msctls_trackbar32",WS_TABSTOP,442,57,45,15
+    CONTROL         "Auto preview",IDC_CHECK_AUTOPREV,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,384,58,54,10
+    LTEXT           "Duration:",IDC_STATIC_DURATION,386,70,96,8
+    PUSHBUTTON      "&Import",IDC_BUTTONBROWSE,426,95,39,14
+    PUSHBUTTON      "Record",IDC_BUTTON_RECORD,403,32,19,14,BS_ICON
+    COMBOBOX        IDC_COMBO_WAVEFORMAT,426,33,62,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Quick Lip Sync",IDC_BUTTONLIPSYNC,321,24,55,14
-    CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,321,67,55,38
+    CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,321,70,55,38
     PUSHBUTTON      "Advanced",IDC_BUTTONLIPSYNC_DIALOG,321,52,55,14
-    LTEXT           "Static",IDC_STATIC_BASE36NAME,322,10,55,8
-    RTEXT           "Recording format:",IDC_STATIC_REC,427,11,59,8
-    PUSHBUTTON      "&Export",IDC_BUTTON_EXPORT,384,93,40,14
+    LTEXT           "Static",IDC_STATIC_BASE36NAME,253,11,55,8
+    RTEXT           "Recording format:",IDC_STATIC_REC,427,20,60,8
+    PUSHBUTTON      "&Export",IDC_BUTTON_EXPORT,384,95,40,14
     CONTROL         "Use Text",IDC_CHECK_USETEXT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,321,41,55,10
-    PUSHBUTTON      "Delete",IDC_BUTTONDELETEAUDIO,474,93,18,14,BS_ICON
-    PUSHBUTTON      "Edit",IDC_EDITAUDIO,383,24,19,14,BS_ICON | BS_FLAT
-    LTEXT           "Levels Clipped",IDC_STATIC_CLIPPED,386,42,106,8
+    PUSHBUTTON      "Delete",IDC_BUTTONDELETEAUDIO,469,95,18,14,BS_ICON
+    PUSHBUTTON      "Edit",IDC_EDITAUDIO,383,32,19,14,BS_ICON | BS_FLAT
+    LTEXT           "Levels Clipped",IDC_STATIC_CLIPPED,386,47,99,8
+    GROUPBOX        "Speech and lip-syncing",IDC_GROUP_AUDIO,313,7,179,104
 END
 
 IDD_DIALOGGRADIENTS DIALOGEX 0, 0, 117, 108
