--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1831,7 +1831,7 @@ BEGIN
     CONTROL         "",IDC_STATIC1,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_TABSTOP,7,7,212,190
     EDITTEXT        IDC_EDIT1,7,200,212,29,ES_MULTILINE | ES_READONLY
     CONTROL         "Cel only",IDC_RADIOCEL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,233,17,44,10
-    CONTROL         "Enire loop",IDC_RADIOLOOP,"Button",BS_AUTORADIOBUTTON,233,31,44,10
+    CONTROL         "Entire loop",IDC_RADIOLOOP,"Button",BS_AUTORADIOBUTTON,233,31,44,10
     CONTROL         "Entire view",IDC_RADIOVIEW,"Button",BS_AUTORADIOBUTTON,233,44,49,10
     GROUPBOX        "Extent",IDC_STATICGROUP,226,3,60,57
     EDITTEXT        IDC_EDITRANGE,226,65,60,45,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
